# cx-support-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/knowledge_base/: account_verification.md  case_0142_duplicate_charge.md  case_0156_gift_refund.md  case_0163_tier_downgrade.md  case_0171_social_media_threat.md  case_0188_partial_shipment.md  case_0195_customs_delay.md  case_0203_deletion_mid_complaint.md  case_0211_currency_dispute.md  complaint_handling_sop.md  data_privacy_rules.md  delivery_delay_process.md  escalation_rules.md  lost_package_process.md  order_modification.md  promo_code_disputes.md  refund_policy_premium.md  refund_policy_standard.md  return_shipping_cost.md  subscription_cancellation.md
eval/: ground_truth.json  load_test.py  metrics.py  report.md  run_eval.py
scripts/: ingest.py  run_evals.py
src/: config.py  db.py  embeddings.py  main.py  models.py
src/agent/: graph.py  nodes.py  prompts.py  state.py
src/ingestion/: chunker.py  loader.py  pipeline.py
src/middleware/: errors.py  logging.py
src/retrieval/: fusion.py  keyword.py  vector.py
tests/: conftest.py  test_api.py  test_chunker.py  test_fusion.py  test_guard.py  test_keyword.py
ui/: index.html
