[project]
name = "otonomee-kb-agent"
version = "1.0.0"
description = "Production-grade RAG agent for CX support knowledge base"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "groq>=1.5.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
